square-root/src/styles/Home.css
/*----------------------
Smooth Scroll --------*/
.front-container {
  scroll-behavior: smooth;
  overscroll-behavior-y: contain;
  scroll-snap-type: y mandatory;
  overflow-y: auto;
  overflow-x: hidden;
  height: calc(100vh - var(--nav-size));
  width: 100%;
}

/* common for each section */
.front-container section {
  width: 100%;
  height: 100vh;
  scroll-snap-align: center;
  position: relative;
}

.front-container section p {
  font-size: 1rem;
}

/* Hero */
section#first {
  background-image: url("../images/background_banner.jpg");
  background: #c33764; /* fallback colour. Make sure this is just one solid colour. */
  background: -webkit-linear-gradient(
      rgba(139, 166, 139, 0.8),
      rgba(139, 166, 139, 0.8)
    ),
    url("../images/background_banner.jpg");
  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(139, 166, 139, 0.2)),
    url("../images/background_banner.jpg"); /* The least supported option. */
  background-size: cover;
  position: relative;
  display: grid;
  grid-template-columns: 1.2fr 0.6fr 1.2fr;
  grid-template-rows: 1.5fr 1.1fr 0.4fr;
  height: calc(100vh - var(--nav-size));
}

section#first .logo {
  padding-top: 40px;
  grid-column: 1 / 3;
  grid-row: 1;
}

section#first .logo img {
  float: left;
  width: 90%;
}

section#first .signup-btn button {
  font-size: 0.8rem;
  background: none;
  border: 0.2px solid white;
  color: white;
  cursor: pointer;
  padding: 2%;
}

section#first .signup-btn button:hover {
  transition: 0.5s;
  -webkit-transform: scale(1.2);
  transform: scale(1.2);
  font-weight: 400;
  background-color: rgba(0, 0, 0, 0.4);
}

section#first .d {
  grid-column: 2 / 4;
  grid-row: 2;
  margin-right: 5%;
  margin-left: 5%;
  text-align: end;
  justify-content: end;
}

section#first .see-more {
  grid-column: 2;
  grid-row: 3;
  display: flex;
  align-items: center;
  justify-items: center;
  margin-bottom: 10px;
  width: 100%;
}

.see-more button {
  color: white;
  font-size: 20px;
  font-weight: 600;
  margin-left: auto;
  margin-right: auto;
}

.see-more button img {
  height: 15px;
  width: 15px;
  margin-left: 0.5%;
}

@media screen and (max-width: 768px) {
  .see-more button {
    font-size: 16px;
  }
}
/* End of Hero */

section#second {
  max-width: fit-content;
}
section#third {
  max-width: fit-content;
}

section#fifth {
  background-image: url("../images/boots.jpg");
  background-size: cover;
}

section#sixth {
  height: 100vh;
  background-color: var(--mainGrey);
}

section#footer {
  height: calc(100vh - var(--nav-size));
}

.list-item h1 {
  font-size: 35px;
  font-weight: 600;
  color: white;
  line-height: 1.2em;
  letter-spacing: 0.03;
}

.list-item {
  line-height: 1.5em;
}

.list-item i {
  font-family: "IBM Plex Serif", serif;
}

.list-item img {
  height: 10px;
  width: 10px;
  margin-bottom: 15px;
}

.container-white {
  background-color: white;
}

@media screen and (max-width: 768px) {
  .list-item h1 {
    font-size: 28px;
  }

  .list-item {
    line-height: 2.7em;
  }
}

.bd-notification {
  padding-top: 40px;
  margin: 50px;
}
.box {
  padding-left: 3%;
  padding-top: 50%;
  padding-right: 10%;
  position: relative;
  bottom: 0px;
}

.image1 {
  display: block;
  height: 550px;
  width: 1850px;
  padding-top: 8%;
  padding-left: 6%;
}

.fronttext {
  position: absolute;
  bottom: 20%;
  left: 2%;
  font-size: 50px;
  color: white;
}
.frontdesc {
  position: absolute;
  bottom: 10%;
  left: 2%;
  font-size: 30px;
  color: white;
  width: 40%;
}

.position-absolute {
  position: absolute;
}
.main-punchline {
  color: var(--mainGrey);
  line-height: 1.8em;
  text-align: left;
  margin-left: 5%;
}

.main-punchline--lrg {
  font-size: 3.5em;
  line-height: 1em;
  font-weight: 600;
  letter-spacing: 0.02em;
  width: 90%;
  bottom: 19%;
}
.main-punchline strong {
  font-family: "PoppinsBold";
  line-height: 2em;
}

.main-punchline--p {
  font-size: 1.2em;
  letter-spacing: 0.03em;
  margin-top: 3%;
  width: 70%;
  line-height: 1.7em;
}

.short-border {
  border: 3px solid var(--mainGrey);
  width: 5%;
  bottom: 0;
}

.short-border-white {
  border: 3px solid white;
  width: 5%;
  bottom: 0;
  margin-left: 3%;
}

.light-green {
  color: #84a086;
}

.is-white {
  color: white;
}

em {
  font-family: "IBMPlex";
  font-weight: bold;
  font-size: 1.3em;
}

